force-app/main/default/objects/Payment_Intent__c/Payment_Intent__c.object-meta.xml
<CustomObject>
    <label>Payment Intent</label>
    <nameField>
        <label>Payment Intent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Intents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>