force-app/main/default/objects/Payment_Intent__c/fields/Amount_Capturable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Capturable__c</fullName>
    <label>Amount Capturable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>