force-app/main/default/objects/Payment_Intent__c/fields/Application_Fee_Amount_os_for_payment_in__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Amount_os_for_payment_in__c</fullName>
    <label>Application Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>