force-app/main/default/objects/Payment_Intent__c/fields/Canceled_At__c.field-meta.xml
<CustomField>
    <fullName>Canceled_At__c</fullName>
    <label>Canceled At</label>
    <type>DateTime</type>
</CustomField>