force-app/main/default/objects/Payment_Intent__c/fields/Capture_Method__c.field-meta.xml
<CustomField>
    <fullName>Capture_Method__c</fullName>
    <label>Capture Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>