force-app/main/default/objects/Payment_Intent__c/fields/confirmation_method__c.field-meta.xml
<CustomField>
    <fullName>confirmation_method__c</fullName>
    <label>Confirmation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>automatic</fullName>
            </value>
            <value>
                <fullName>manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>