force-app/main/default/objects/Payment_Intent__c/fields/last_payment_error__c.field-meta.xml
<CustomField>
    <fullName>last_payment_error__c</fullName>
    <label>Last Payment Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>