force-app/main/default/objects/Payment_Intent__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Payment Intents</relationshipLabel>
    <relationshipName>Payment_Intents</relationshipName>
    <type>Lookup</type>
</CustomField>