force-app/main/default/objects/Payment_Intent__c/fields/Statement_Descriptor_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Statement_Descriptor_Suffix__c</fullName>
    <label>Statement Descriptor Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>