force-app/main/default/objects/Payment_Intent__c/fields/Stripe_Payment_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Payment Intent Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>