force-app/main/default/objects/Payment_Intent__c/validationRules/Restrict_Success_Intent_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Success_Intent_Status_Change</fullName>
    <active>true</active>
    <description>Restrict Success Intent Status Change</description>
    <errorConditionFormula>AND( ISCHANGED(  Status__c ) , ISPICKVAL( PRIORVALUE(Status__c) ,&apos;succeeded&apos;))</errorConditionFormula>
    <errorMessage>For succeded Intent, we cannot change the status</errorMessage>
</ValidationRule>