force-app/main/default/objects/Payment_Intent__c/listViews/All_Initiated_or_Failed_Payment_Intents.listView-meta.xml
<ListView>
    <fullName>All_Initiated_or_Failed_Payment_Intents</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>payment_new,payment_failed</value>
    </filters>
    <label>All Initiated or Failed Payment Intents</label>
</ListView>