force-app/main/default/objects/Payment_Intent__c/listViews/All_Required_Payment_Method_Intents.listView-meta.xml
<ListView>
    <fullName>All_Required_Payment_Method_Intents</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription__c</columns>
    <columns>Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>requires_payment_method</value>
    </filters>
    <filters>
        <field>Stripe_Payment_Intent_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Required Payment Method Intents</label>
</ListView>