force-app/main/default/objects/Payment_Intent__c/listViews/All_Subscription_Payment_Intents.listView-meta.xml
<ListView>
    <fullName>All_Subscription_Payment_Intents</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stripe_Payment_Intent_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Subscription Payment Intents</label>
</ListView>